7088913: Add compatible static hashCode(primitive) to primitive wrapper classes
Adds static utility methods to each primitive wrapper class to allow calculation of a hashCode value from an unboxed primitive.

Reviewed-by: darcy, smarks, dholmes